<resources>
    <string name="app_name">MoviesApp</string>
    <string name="action_retry">Retry</string>
    <string name="action_top_rated">Top rated</string>
    <string name="action_now_playing">Now playing</string>
    <string name="action_trending">Trending</string>
    <string name="action_popular">Popular</string>
    <string name="action_sort_by">Sort by</string>
    <string name="movie_backdrop_content_description">Movie backdropPath</string>
    <string name="movie_poster">Movie poster</string>
    <string name="label_overview">Overview</string>
    <string name="release_date">Release date</string>
    <string name="label_votes">%s votes</string>
    <string name="action_share">Share trailer</string>
    <string name="action_bookmark">Bookmark movies</string>
    <string name="action_remove_from_bookmark">Delete from bookmark</string>
    <string name="movie_added_successfully">Movie bookmarked successfully</string>
    <string name="movie_removed_successfully">Movie removed from your bookmark successfully</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="play_icon">Play icon</string>
    <string name="trailer_thumbnail">Trailer thumbnail</string>
    <string name="cast">The Cast</string>
    <string name="trailers">Trailers</string>
    <string name="user_reviews">User Reviews</string>
    <string name="language">Language</string>
    <string name="bookmark">Bookmarked Movies</string>
    <string name="bottom_navigation_border">Bottom navigation border</string>
    <string name="no_bookmark">Bookmark you favourite movies</string>
    <string name="review_author_image">Review author image</string>
    <string name="review_added_successfully">Your review is added successfully</string>
    <string name="content_description_movie_poster">Movie poster image</string>
    <string name="action_search">Search for a movie</string>
    <string name="content_desc">content_desc</string>
</resources>
