<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"/>

    <item
        android:id="@+id/action_sort_by"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/action_sort_by"
        app:showAsAction="always">
        <!-- movies submenu -->
        <menu>
            <group
                android:id="@+id/menu_sort_group"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/action_popular_movies"
                    android:checked="true"
                    android:title="@string/action_popular" />

                <item
                    android:id="@+id/action_top_rated"
                    android:title="@string/action_top_rated" />

                <item
                    android:id="@+id/action_now_playing"
                    android:title="@string/action_now_playing" />

                <item
                    android:id="@+id/action_trending"
                    android:title="@string/action_trending" />
            </group>
        </menu>
    </item>

</menu>